# idm-gridcore

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TROUBLESHOOTING.md  build.sh
.cargo/: config.toml
agent/: Cargo.toml
agent/src/: client.rs  config.rs  main.rs
gridnode/: Cargo.toml
gridnode/src/: client.rs  config.rs  docker.rs  main.rs
redis-setup/: .env  README.md  docker-compose.yml
scripts/: README.md  build-cross.sh
server/: Cargo.toml
server/src/: auth.rs  config.rs  main.rs  models.rs
test-workflow/: Dockerfile  README.md  consumer.py  monitor.py  producer.py  requirements.txt
