[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
bollard = "0.17"
futures = "0.3"
config = "0.14"
uuid = { version = "1", features = ["v4"] }
gethostname = "0.5"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
