[package]
name = "gridnode"
version = "0.2.1"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "native-tls-vendored"] }
bollard = "0.18"
futures = "0.3"
gethostname = "1.0"
toml = "0.9"
dirs = "6"
