[package]
name = "gridnode"
version = "0.3.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
bollard = "0.18"
futures = "0.3"
gethostname = "1.0"
toml = "0.9"
dirs = "6"
